# libtabe

./: COPYING  INSTALL  configure
doc/: BoPoMoFo.shtml  Changes  Changes.pre-0.1  TODO  ZuYinCode.txt  et26.txt  libtabe.sgml
script/: Makefile.in  acconfig.h  config.h.in  configure.in
src/: Makefile.in  tabe.h  tabe_charref.h  tabe_chu.c  tabe_tsi.c  tabe_tsidbint.c  tabe_tsiyindbint.c  tabe_util.c  tabe_yin.c  tabe_yin2zhi.h  tabe_zhi2yin.h  tabe_zuyin.c  version.h
src/examples/: README  testtabe.c
src/supports/GTKTsi/: GTKTsi.c  GTKTsi.rc  Imakefile
src/supports/bims/: Makefile.in  README  bims.c  bims.h
src/supports/bims/examples/GTK/: Imakefile  gtkentry.rc  gtkentry_glue.c
src/tsi-src/: COPYING  Makefile.in  README  tsi.src
src/util/: Makefile.in  tsiadd.c  tsidel.c  tsidump.c  tsipackdb  tsiyindump.c
tsi-src/: COPYING  Makefile.in  README  tsi.src  tsi_contrib.html
util/: Makefile.in  tsiadd.c  tsidel.c  tsidump.c  tsiguess.c  tsipackdb.in  tsiyincheck.c  tsiyindump.c
